fixed overflow issue

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -145,7 +145,7 @@ header {
   line-height: 40px;
   color: #000;
   font-weight: 700;
-  overflow: auto;
+  overflow: hidden;
 }
 .content-p {
   font-size: 16px;
